[tool.poetry]
name = "puzl"
version = "0.1.0"
description = ""
authors = ["Duc-Minh Phan <alephvn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
